--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 }
 
 header .navegador {
+  color: white;
   display: flex;
   justify-content: space-between;
 }
@@ -27,225 +28,117 @@ header .navegador .boton button {
   border-radius: 10px;
 }
 
-.main-index .div1 {
+.main-index {
+  margin-bottom: 50px;
+}
+.main-index .main-img {
+  position: relative;
   width: 100%;
-  height: 95vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 20px;
-  background-color: #ffffff;
-  background-image: linear-gradient(182deg, #ffffff 42%, #2dcfac 58%, #577ae6 81%);
-  border-radius: 10px;
-}
-.main-index .div1 .titulo {
-  width: 60%;
-  padding-bottom: 20px;
-}
-.main-index .div1 .titulo span {
-  color: #2545a5;
-}
-.main-index .div1 .titulo h1 {
-  height: 10%;
-}
-.main-index .div1 .botones .button-24 {
-  background-color: black;
-  border: 1px solid #222222;
-  border-radius: 60px;
-  box-sizing: border-box;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 20px;
-  margin: 0;
-  outline: none;
-  padding: 13px 23px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  touch-action: manipulation;
-  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s, transform 0.1s;
-  user-select: none;
-  -webkit-user-select: none;
-  width: auto;
-}
-.main-index .div1 .botones .button-24:focus-visible {
-  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
-  transition: box-shadow 0.2s;
-}
-.main-index .div1 .botones .button-24:active {
-  background-color: #F7F7F7;
-  border-color: #000000;
-  transform: scale(0.96);
-}
-.main-index .div1 .botones .button-24:disabled {
-  border-color: #DDDDDD;
-  color: #DDDDDD;
-  cursor: not-allowed;
-  opacity: 1;
-}
-.main-index .div1 .botones .button-23 {
-  background-color: transparent;
-  border: 1px solid #222222;
-  border-radius: 60px;
-  box-sizing: border-box;
-  color: #222222;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 20px;
-  margin: 0;
-  outline: none;
-  padding: 13px 23px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  touch-action: manipulation;
-  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s, transform 0.1s;
-  user-select: none;
-  -webkit-user-select: none;
-  width: auto;
-}
-.main-index .div1 .botones .button-23:focus-visible {
-  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
-  transition: box-shadow 0.2s;
-}
-.main-index .div1 .botones .button-23:active {
-  background-color: #F7F7F7;
-  border-color: #000000;
-  transform: scale(0.96);
-}
-.main-index .div1 .botones .button-23:disabled {
-  border-color: #DDDDDD;
-  color: #DDDDDD;
-  cursor: not-allowed;
-  opacity: 1;
-}
-.main-index .descripciones {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
   height: 100vh;
-  width: 100%;
-  overflow: hidden;
+  margin-bottom: 50px;
 }
-.main-index .descripciones .textos {
-  width: 50%;
+.main-index img {
+  object-fit: cover;
+  width: 100%;
   height: 100%;
+}
+.main-index .logo-antunez {
+  position: absolute;
+  top: 25%;
+  z-index: 1;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  overflow: hidden;
-}
-.main-index .descripciones .textos .texto1 {
-  padding: 20px;
-}
-.main-index .descripciones .textos .texto2 {
-  padding: 20px;
-}
-.main-index .descripciones .cuadros {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-content: space-around;
-  width: 100vh;
-  height: 100vh;
-}
-.main-index .descripciones .cuadros .cuadro1 {
-  display: flex;
-  width: 30%;
-}
-.main-index .descripciones .cuadros .cuadro1 span {
-  color: #2545a5;
-  font-size: 90px;
-}
-.main-index .descripciones .cuadros .cuadro2 {
-  padding: 20px;
-  display: flex;
-  width: 40%;
-}
-.main-index .descripciones .cuadros .cuadro2 span {
-  color: #2545a5;
-  font-size: 90px;
-}
-.main-index .descripciones .cuadros .cuadro3 {
-  padding: 20px;
-  display: flex;
-  width: 40%;
-}
-.main-index .descripciones .cuadros .cuadro3 span {
-  color: #2545a5;
-  font-size: 90px;
-}
-.main-index .experiencia1 {
-  display: flex;
-  padding: 20px;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-.main-index .experiencia1 .uno {
-  width: 20%;
-  margin-right: 100px;
-  border: solid 5px #2545a5;
-  border-right: #2545a5;
-  border-top: #2545a5;
-}
-.main-index .experiencia1 .dos {
-  width: 20%;
-}
-.main-index .experiencia2 {
-  display: flex;
-  padding: 20px;
-  flex-direction: row;
   align-items: center;
 }
-.main-index .tres {
-  width: 20%;
-  padding: 30px;
-  margin-right: 35px;
+.main-index .logo-antunez img {
+  width: 400px;
+  height: 400px;
 }
-.main-index .cuatro {
-  width: 20%;
-  margin-right: 100px;
-}
-.main-index .cinco {
-  width: 20%;
-  padding: 30px;
-}
-.main-index .seccion3 {
+.main-index .main-depto {
   display: flex;
-  width: 204vh;
-  height: 70vh;
-}
-.main-index .seccion3 .fondo {
-  background-image: url(./../../img/seccion-3-fondo.png);
   width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-  border-radius: 8px;
-}
-.main-index .seccion3 .fondo .caja1 {
-  width: 40%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  height: auto;
   justify-content: space-between;
 }
-.main-index .seccion3 .fondo .caja1 h3 {
-  margin-top: 20px;
+.main-index .main-depto .presentacion {
+  width: 30%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
-.main-index .seccion3 .fondo .caja1 p {
-  margin-bottom: 20px;
+.main-index .main-depto .depto img {
+  object-fit: cover;
+  width: 500px;
+  height: 500px;
+}
+.main-index .main-depto .position-absoluted {
+  position: absolute;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main-index .main-depto .position-absoluted img {
+  left: 10%;
+  border: solid 2px white;
+  width: 55vh;
+  height: 55vh;
+}
+.main-index .main-galeria {
+  width: 100%;
+  height: auto;
+}
+.main-index .main-galeria .texto {
+  display: flex;
+  width: 100%;
+  height: 30vh;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.main-index .main-galeria .galeria {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+}
+.main-index .main-galeria .galeria img {
+  object-fit: cover;
+  width: 300px;
+  height: 600px;
+}
+
+.footer {
+  width: 100%;
+  height: auto;
+}
+.footer .img-footer img {
+  position: absolute;
+  object-fit: cover;
+  height: 80vh;
+  width: 99%;
+}
+.footer .formulario {
+  left: 59%;
+  display: flex;
+  z-index: 1;
+  position: relative;
+  width: 40%;
+  height: 80vh;
+}
+.footer .formulario .container {
+  width: 100%;
+  height: 100%;
+  background: rgba(79, 73, 73, 0.7019607843);
+  background-size: cover;
+  font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, aclonica;
+  font-size: 14px;
+  color: white;
+}
+.footer .formulario .h3 {
+  font-family: "aclonica";
+  font-size: 120px;
 }
 
 /*# sourceMappingURL=style.css.map */
