--- a/scss/pages/_main-index.scss
+++ b/scss/pages/_main-index.scss
@@ -1,261 +1,131 @@
 .main-index {
-
-    .div1 {
+    margin-bottom: 50px;
+    .main-img {
+        position: relative;
         width: 100%;
-        height: 95vh;
+        height: 100vh;
+        margin-bottom: 50px;
+    }
+
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    .logo-antunez {
+        position: absolute;
+        top: 25%;
+        z-index: 1;
         display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        padding: 20px;
-        background-color: #ffffff;
-        background-image: linear-gradient(182deg, #ffffff 42%, #2dcfac 58%, #577ae6 81%);
-        border-radius: 10px ;
+        align-items: center;
 
-        .titulo {
-            width: 60%;
-            padding-bottom: 20px;
-
-            span {
-                color: #2545a5;
-
-            }
-
-            h1 {
-                height: 10%;
-
-            }
-        }
-
-        .botones {
-            .button-24 {
-                background-color: black;
-                border: 1px solid #222222;
-                border-radius: 60px;
-                box-sizing: border-box;
-                color: white;
-                cursor: pointer;
-                display: inline-block;
-                font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-                font-size: 16px;
-                font-weight: 600;
-                line-height: 20px;
-                margin: 0;
-                outline: none;
-                padding: 13px 23px;
-                position: relative;
-                text-align: center;
-                text-decoration: none;
-                touch-action: manipulation;
-                transition: box-shadow .2s, -ms-transform .1s, -webkit-transform .1s, transform .1s;
-                user-select: none;
-                -webkit-user-select: none;
-                width: auto;
-            }
-
-            .button-24:focus-visible {
-                box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
-                transition: box-shadow .2s;
-            }
-
-            .button-24:active {
-                background-color: #F7F7F7;
-                border-color: #000000;
-                transform: scale(.96);
-            }
-
-            .button-24:disabled {
-                border-color: #DDDDDD;
-                color: #DDDDDD;
-                cursor: not-allowed;
-                opacity: 1;
-            }
-
-
-            .button-23 {
-                background-color: transparent;
-                border: 1px solid #222222;
-                border-radius: 60px;
-                box-sizing: border-box;
-                color: #222222;
-                cursor: pointer;
-                display: inline-block;
-                font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-                font-size: 16px;
-                font-weight: 600;
-                line-height: 20px;
-                margin: 0;
-                outline: none;
-                padding: 13px 23px;
-                position: relative;
-                text-align: center;
-                text-decoration: none;
-                touch-action: manipulation;
-                transition: box-shadow .2s, -ms-transform .1s, -webkit-transform .1s, transform .1s;
-                user-select: none;
-                -webkit-user-select: none;
-                width: auto;
-            }
-
-            .button-23:focus-visible {
-                box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
-                transition: box-shadow .2s;
-            }
-
-            .button-23:active {
-                background-color: #F7F7F7;
-                border-color: #000000;
-                transform: scale(.96);
-            }
-
-            .button-23:disabled {
-                border-color: #DDDDDD;
-                color: #DDDDDD;
-                cursor: not-allowed;
-                opacity: 1;
-            }
+        img {
+            width: 400px;
+            height: 400px;
         }
     }
 
-    .descripciones {
+    .main-depto {
         display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        height: 100vh;
         width: 100%;
-        overflow: hidden;
+        height: auto;
+        justify-content: space-between;
 
-        .textos {
-            width: 50%;
-            height: 100%;
+        .presentacion {
+            width: 30%;
+            height: auto;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
-            align-items: flex-start;
-            overflow: hidden;
+            justify-content: space-evenly;
+            align-items: center;
 
-            .texto1 {
-                padding: 20px;
-            }
+        }
 
-            .texto2 {
-                padding: 20px;
+        .depto {
+            img {
+                object-fit: cover;
+                width: 500px;
+                height: 500px;
             }
         }
 
-        .cuadros {
+        .position-absoluted {
+            position: absolute;
+            width: 100%;
+            height: 500px;
             display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            align-content: space-around;
-            width: 100vh;
-            height: 100vh;
+            justify-content: center;
+            align-items: center;
 
-            .cuadro1 {
-                display: flex;
-                width: 30%;
-
-                span {
-                    color: #2545a5;
-                    font-size: 90px;
-                }
-
-            }
-
-            .cuadro2 {
-                padding: 20px;
-                display: flex;
-                width: 40%;
-
-                span {
-                    color: #2545a5;
-                    font-size: 90px;
-                }
-            }
-
-            .cuadro3 {
-                padding: 20px;
-                display: flex;
-                width: 40%;
-
-                span {
-                    color: #2545a5;
-                    font-size: 90px;
-                }
+            img {
+                left: 10%;
+                border: solid 2px white;
+                width: 55vh;
+                height: 55vh;
             }
         }
     }
 
-    .experiencia1 {
-        display: flex;
-        padding: 20px;
-        flex-direction: row;
-        justify-content: flex-end;
+    .main-galeria {
+        width: 100%;
+        height: auto;
 
-        .uno {
-            width: 20%;
-            margin-right: 100px;
-            border: solid 5px #2545a5;
-            border-right: #2545a5;
-            border-top:#2545a5 ;
+        .texto {
+            display: flex;
+            width: 100%;
+            height: 30vh;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
         }
 
-        .dos {
-            width:  20%;
+        .galeria {
+            display: flex;
+            width: 100%;
+            justify-content: space-evenly;
+
+            img {
+                object-fit: cover;
+                width: 300px;
+                height: 600px;
+            }
         }
     }
+}
 
-    .experiencia2 {
+.footer {
+    width: 100%;
+    height: auto;
+    .img-footer {
+        img {
+            position: absolute;
+            object-fit: cover;
+            height: 80vh;
+            width: 99%;
+        }
+    }
+    .formulario {
+        left:59%;
         display: flex;
-        padding: 20px;
-        flex-direction: row;
-        align-items: center;
-    }
+        z-index: 1;
+        position: relative;
+        width: 40%;
+        height: 80vh;
 
-    .tres {
-        width: 20%;
-        padding: 30px;
-        margin-right: 35px;
-    }
-
-    .cuatro {
-        width: 20%;
-        margin-right: 100px;
-    }
-
-    .cinco {
-        width: 20%;
-        padding: 30px;
-    }
-
-    .seccion3 {
-        display: flex;
-        width: 204vh;
-        height: 70vh;
-        .fondo {
-            background-image: url(./../../img/seccion-3-fondo.png);
+        .container {
             width: 100%;
             height: 100%;
-            background-repeat: no-repeat;
+            background: #4f4949b3;
             background-size: cover;
-            background-position: center;
-            object-fit: cover;
-            border-radius: 8px;
-            .caja1 {
-                width: 40%;
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
+            font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif, aclonica;
+            font-size: 14px;
+            color: white;
+        }
 
-                h3 {
-                    margin-top: 20px;
-                }
-
-                p {
-                    margin-bottom: 20px;
-                }
-            }
+        .h3 {
+            font-family: "aclonica";
+            font-size: 120px;
         }
     }
 }
